--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <!--<script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>-->
-        <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/2.0-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+        <script type="text/javascript" async
+          src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
+        </script>
     </head>
     
     <body>
@@ -47,6 +49,9 @@
                                                 <div id="algebra-pot" class="panel-collapse collapse">
                                                     <div class="panel-body">
                                                         <h3>1. Definições</h3>
+                                                        <p>
+                                                            $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$
+                                                        </p>
                                                         <div class="formulas">
                                                             <div lang="latex">\LARGE a^n = n . n . n . n...</div>
                                                             <div lang="latex">\LARGE a^0 = 1</div>
