--- a/index.html
+++ b/index.html
@@ -49,22 +49,19 @@
                                                 <div id="algebra-pot" class="panel-collapse collapse">
                                                     <div class="panel-body">
                                                         <h3>1. Definições</h3>
-                                                        <p>
-                                                            $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}$$
-                                                        </p>
                                                         <div class="formulas">
-                                                            <div lang="latex">\LARGE a^n = n . n . n . n...</div>
-                                                            <div lang="latex">\LARGE a^0 = 1</div>
-                                                            <div lang="latex">\LARGE a^1 = a</div>
-                                                            <div lang="latex">\LARGE a^{-n} = \frac{1}{a^n}</div>
+                                                            <div>\(\LARGE a^n = n . n . n . n...\)</div>
+                                                            <div>\(\LARGE a^0 = 1\)</div>
+                                                            <div>\(\LARGE a^1 = a\)</div>
+                                                            <div>\(\LARGE a^{-n} = \frac{1}{a^n}\)</div>
                                                         </div>
                                                         <h3>2. Propriedades</h3>
                                                         <div class="formulas">
-                                                            <div lang="latex">\LARGE a^m . a^n = a^{a + m}</div>
-                                                            <div lang="latex">\LARGE \frac{a^m}{a^n} = a^{m - n}</div>
-                                                            <div lang="latex">\LARGE a^n . b^n =(ab)^n</div>
-                                                            <div lang="latex">\LARGE \frac{a^n}{b^n} = (\frac{a}{b})^n</div>
-                                                            <div lang="latex">\LARGE (a^m)^n = a^{m.n}</div>
+                                                            <div>\(\LARGE a^m . a^n = a^{a + m}\)</div>
+                                                            <div>\(\LARGE \frac{a^m}{a^n} = a^{m - n}\)</div>
+                                                            <div>\(\LARGE a^n . b^n =(ab)^n\)</div>
+                                                            <div>\(\LARGE \frac{a^n}{b^n} = (\frac{a}{b})^n\)</div>
+                                                            <div>\(\LARGE (a^m)^n = a^{m.n}\)</div>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -80,16 +77,16 @@
                                                     <div class="panel-body">
                                                         <h3>1. Propriedades</h3>
                                                         <div class="formulas">
-                                                            <div lang="latex">\LARGE \sqrt[n]{a} \cdot \sqrt[n]{b} = \sqrt[n]{a.b} \quad com \quad a, b \geqslant 0</div>
-                                                            <div lang="latex">\LARGE \frac{\sqrt[n]{a}}{\sqrt[n]{b}} = \sqrt[n]{\frac{a}{b}}</div>
-                                                            <div lang="latex">\LARGE (\sqrt[n]{a})^m = \sqrt[n]{a^m}</div>
-                                                            <div lang="latex">\LARGE \sqrt[np]{a^mp} = \sqrt[n]{a^m}</div>
-                                                            <div lang="latex">\LARGE a^{\frac{m}{n}} = \sqrt[n]{m}</div>
+                                                            <div>\(\LARGE \sqrt[n]{a} \cdot \sqrt[n]{b} = \sqrt[n]{a.b} \quad com \quad a, b \geqslant 0\)</div>
+                                                            <div>\(\LARGE \frac{\sqrt[n]{a}}{\sqrt[n]{b}} = \sqrt[n]{\frac{a}{b}}\)</div>
+                                                            <div>\(\LARGE (\sqrt[n]{a})^m = \sqrt[n]{a^m}\)</div>
+                                                            <div>\(\LARGE \sqrt[np]{a^mp} = \sqrt[n]{a^m}\)</div>
+                                                            <div>\(\LARGE a^{\frac{m}{n}} = \sqrt[n]{m}\)</div>
                                                         </div>
                                                         <h3>2. Racionalização</h3>
                                                         <div class="formulas">
-                                                            <div lang="latex">\LARGE \frac{2}{\sqrt{3}} = \frac{2}{\sqrt{3}} \cdot \frac{\sqrt{3}}{\sqrt{3}}</div>
-                                                            <div lang="latex">\LARGE \frac{4}{2 + \sqrt{3}} = \frac{4}{2 + \sqrt{3}} \cdot \frac{2 - \sqrt{3}}{2 - \sqrt{3}}</div>
+                                                            <div>\(\LARGE \frac{2}{\sqrt{3}} = \frac{2}{\sqrt{3}} \cdot \frac{\sqrt{3}}{\sqrt{3}}\)</div>
+                                                            <div>\(\LARGE \frac{4}{2 + \sqrt{3}} = \frac{4}{2 + \sqrt{3}} \cdot \frac{2 - \sqrt{3}}{2 - \sqrt{3}}\)</div>
                                                         </div>
                                                     </div>
                                                 </div>
