--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                                 </div>
                                                 <div id="algebra-conjuntos" class="panel-collapse collapse">
                                                     <div class="panel-body"> 
-                                                        <h3>1. União (\(\subset\))</h3>
+                                                        <h3>1. União (\(\cup\))</h3>
                                                         <img src="img/uniao.jpg" style="width:350px;height:255px;">
                                                         <h3>2. Intersecção (\(\cap\))</h3>
                                                         <img src="img/interseca_ao.jpg" style="width:350px;height:255px;">
@@ -178,6 +178,30 @@
                                                         <h3>4. Bijetora</h3>
                                                         <img src="img/bijetora.jpg" style="width:260px;height:147px;margin: 10px;">
                                                         <p class="texto">Uma função é bijetora quando é ao mesmo tempo sobrejetora e injetora, ou seja, <b>todos os elementos de A possuem um correspondente em B</b>.</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            
+                                            <!-- Função do 1º Grau -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-algebra" href="#algebra-f1agrau">Função do 1º Grau (Linear)</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="algebra-f1agrau" class="panel-collapse collapse">
+                                                    <div class="panel-body"> 
+                                                        <h3>1. Definição</h3>
+                                                        <p class="texto">
+                                                            Chama-se função polinomial do 1º grau a toda função \(f:R \rightarrow R\)
+                                                            <br>
+                                                            $$\LARGE f(x) = ax + b$$
+                                                        </p>
+                                                        <img src="img/funcao1grau.jpg" style="width:600px;height:320px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                                        <h3>2. Inequação do 1º Grau</h3>
+                                                        <p class="texto">Chama-se inequação toda sentença do tipo ax + b > 0. Para resolver basta isolar o x:
+                                                            \(\large \quad 2x - 6 > 0 \rightarrow 2x > 6 \rightarrow x > 3\)
+                                                        </p>
                                                     </div>
                                                 </div>
                                             </div>
