--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <script type="text/javascript" async
           src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML" async>
         </script>
+        
+        <script language="JavaScript">
+            $(document).keydown(function(event){
+                if(event.keyCode==123){
+                    return false;
+                }
+            });
+        </script>
                 
         <script language="JavaScript">
           window.onload = function() {
