--- a/index.html
+++ b/index.html
@@ -440,7 +440,33 @@
                                 </div>
                                 <div id="geoplana" class="panel-collapse collapse">
                                     <div class="panel-body">
-                                        Teste
+                                        <!-- Abertura cascata Matemática-Geometria Plana -->
+                                        <div class="panel-group" id="accordion-mat-geo">
+                                            
+                                            <!-- Polígonos -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-geo" href="#geo-poli">Polígonos</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="geo-poli" class="panel-collapse collapse">
+                                                    <div class="panel-body">
+                                                        <h3>1. Nomenclatura</h3>
+                                                        <img src="img/poligonos.png" style="width:521px;height:552px;margin: 25px;">
+                                                        <div class="formulas">
+                                                            <h3>2. Número de diagonais</h3>
+                                                            <div>\(\LARGE d = \frac{n \cdot (n - 3)}{2}\)</div>
+                                                            <h3>3. Soma dos ângulos internos</h3>
+                                                            <div>\(\LARGE S_i = (n - 2) \cdot 180°\)</div>
+                                                            <h3>4. Somo das ângulos externos</h3>
+                                                            <div>\(\LARGE S_e = 360°\)</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            
+                                        </div>
                                     </div>
                                 </div>
                             </div>
