--- a/index.html
+++ b/index.html
@@ -484,7 +484,40 @@
                 </div>
                 <div id="fisica" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Teste
+                        <!-- Abertura cascata Física -->
+                        <div class="panel-group" id="accordion-fis">
+                            
+                            <!-- Cinemática -->
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion-fis" href="#fis-cinematica">Cinemática</a>
+                                    </h4>
+                                </div>
+                                <div id="fis-cinematica" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <div class="formulas">
+                                            <h3>1. Movimento Uniforme (M.U.)</h3>
+                                            <div>\(\LARGE V = \frac{\Delta S}{\Delta t}\)</div>
+                                            <div>\(\LARGE S = S_0 + V \cdot t\)</div>
+                                            <h3>2. Movimento Uniformemente Variado (M.U.V.)</h3>
+                                            <div>\(\LARGE V = V_0 + a \cdot t\)</div>
+                                            <div>\(\LARGE V^2 = V_0^2 + 2a \Delta S\)</div>
+                                            <div>\(\LARGE S = S_0 + V_0 \cdot t + \frac{a \cdot t^2}{2}\)</div>
+                                            <h3>3. Aceleração</h3>
+                                            <div>\(\LARGE a = \frac{\Delta V}{\Delta t}\)</div>
+                                            <h3>4. Derivando a função (E V A)</h3>
+                                            <div>\(\LARGE 2t^3\)</div>
+                                            <div>\(\LARGE 6t^2\)</div>
+                                            <div>\(\LARGE 12t^1\)</div>
+                                            <div>\(\LARGE 12t^0\)</div>
+                                            <div>\(\LARGE 0\)</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                        </div>
                     </div>
                 </div>
             </div>
