--- a/index.html
+++ b/index.html
@@ -886,6 +886,7 @@
                                         <img src="img/fotossintese6.png" style="width:835px;height:569px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
                                         <img src="img/fotossintese7.png" style="width:835px;height:569px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
                                         <img src="img/fotossintese8.png" style="width:835px;height:569px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                        <img src="img/fotossintese_graph.png" style="width:875px;height:613px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
                                         <h3>2. Respiração Celular</h3>
                                         <p class="texto">Respiração celular é a transformação dos açucares, gorduras ou proteinas em energia (moeda energética universal, ATP)</p>
                                         <p class="texto">Glicólise: acontece a divisão de uma glicólise por meio de 2 ATP, formando no final 2 piruvatos, 2 NADH e 2 ATP.</p>
@@ -942,6 +943,51 @@
                                         Para formar uma proteína de 60 aminoácidos, por exemplo, é necessário 1 RNAm, 60 códons (cada um corresponde a um aminoácido), 180 bases nitrogenadas (cada sequência de 3 bases dá origem a um aminoácido), 1 ribossomo e 60 RNAt (cada RNAt transporta um aminoácido). Pode-se notar, então, que se trata de um processo altamente complexo, já que há a intervenção de vários agentes.    
                                         </li>
                                         </ul>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Mitose -->
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion-bio" href="#bio-mitose">Mitose</a>
+                                    </h4>
+                                </div>
+                                <div id="bio-mitose" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <div class="formulas">
+                                            <h3>Mitose</h3>
+                                            <p class="texto">De forma prática, podemos entender que na mitose a célula se duplica para dar origem a duas novas células. Estas são conhecidas como células filhas (formadas a partir da divisão celular) e são idênticas uma da outra, uma vez que foram formadas a partir de uma única célula.</p>
+                                            <ul class="lista">
+                                                <li>Prófase: nesta fase, as células começam a se preparar para a divisão. É neste momento que ocorrerá a duplicação do DNA e centríolos. Com o DNA condensado e os centríolos em movimento, inicia-se o processo da divisão mitótica</li>
+                                                <li>Metáfase: aqui começa o alinhamento entre os pares formados na fase anterior. Nesta etapa, o DNA alinha-se no eixo central enquanto os centríolos iniciam sua conexão com ele. Dois fios do cromossomo se ligam na parte central do centrômero.</li>
+                                                <li>Anáfase: a divisão começa com os cromossomos migrando para lados opostos da célula, metade vai para um lado e a outra metade vai para o outro.</li>
+                                                <li>Telófase: esta é a última fase da mitose. Nesta etapa a membrana celular se divide em duas partes, formando, assim, duas novas células. Cada uma delas ficará com metade do DNA original.</li>
+                                                <li>Interfase: este é o estado “normal” da célula, ou seja, aqui ela não se encontra em divisão. Nesta fase, ela  mantém o equilíbrio de todas as suas funções através da absorção dos nutrientes necessários à sua manutenção. Ela permanecerá neste estágio até estar preparada para uma nova divisão, que ocorrerá a partir da duplicação dos ácidos nucléicos. A partir de então, o ciclo se reinicia.</li>
+                                            </ul>
+                                            <img src="img/mitose.jpg" style="width:550px;height:323px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                            <img src="img/meiose_divisaoI_anim.gif" style="width:400px;height:140px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <!-- Meiose -->
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion-bio" href="#bio-meiose">Meiose</a>
+                                    </h4>
+                                </div>
+                                <div id="bio-meiose" class="panel-collapse collapse">
+                                    <div class="panel-body">
+                                        <div class="formulas">
+                                            <h3>Meiose</h3>
+                                            <p class="texto">A meiose é a divisão celular que ocorre na formação dos gametas, reduzindo o número de cromossomos de uma espécie pela metade. Assim, uma célula-mãe diploide origina 4 células-filhas haploides diferentes da célula mãe.</p>
+                                            <img src="img/meiose.gif" style="width:500px;height:404px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                            <img src="img/meiose_divisaoI_anim2.gif" style="width:576px;height:140px;display: block;margin: 25px;margin-left: auto;margin-right: auto;">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
