--- a/index.html
+++ b/index.html
@@ -340,6 +340,74 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            
+                                            <!-- Logaritmo  -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-algebra" href="#algebra-log">Logaritmo</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="algebra-log" class="panel-collapse collapse">
+                                                    <div class="panel-body"> 
+                                                        <h3>1. Definição</h3>
+                                                        <p class="texto">
+                                                            Chama-se logaritmo de um número onde N > 0 em uma base a, com a > 0 e a != 1, definido por:
+                                                            <br>
+                                                            $$\LARGE \log_a N = a^x = N$$
+                                                        </p>
+                                                        <h3>2. Propriedades</h3>
+                                                        <div class="formulas">
+                                                            <div>\(\LARGE \log_a (M \cdot N) = \log_a M + \log_a N\)</div>
+                                                            <div>\(\LARGE \log_a \left(\frac{M}{N} \right) = \log_a M - \log_a N\)</div>
+                                                            <div>\(\LARGE \log_a (N^m) = m \cdot \log_a N\)</div>
+                                                            <div>\(\LARGE \log_a (\sqrt[m]{N}) = \frac{1}{m} \cdot \log_a N\)</div>
+                                                            <div>\(\LARGE \log_a N = \frac{\log_b N}{\log_b a}\)</div>
+                                                            <div>\(\LARGE \log_a B = \frac{1}{\log_B a}\)</div>
+                                                        </div>
+                                                        <h3>3. f(x) logarítmica</h3>
+                                                        <p class="texto">
+                                                            Chama-se função logarítmica a toda função definida por:
+                                                            <br>
+                                                            $$\LARGE f(x) = \log_a x$$
+                                                        </p>
+                                                        <img src="img/flog.gif" style="width:417px;height:197px;display: block;margin: 25px;margin-left: auto;margin-right: auto;"> 
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            
+                                            <!-- Função Modular -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-algebra" href="#algebra-mod">Função Modular</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="algebra-mod" class="panel-collapse collapse">
+                                                    <div class="panel-body"> 
+                                                        <h3>1. Definição</h3>
+                                                        <p class="texto">
+                                                            $$\LARGE |x| = \begin{cases} x, se \space x \geq 0 \\ -x, se \space x < 0 \end{cases}$$
+                                                            $$\LARGE |A| = B \Rightarrow A = B \space e \space A = -B$$           
+                                                        </p>
+                                                        <div class="formulas">
+                                                            <div>\(\LARGE |\sqrt{2} - \sqrt{7}| = -(\sqrt{2} - \sqrt{7})\)</div>
+                                                            <div>\(\LARGE |2x - 2| = x + 2 \Rightarrow 2x - 2 = x + 2 \space ou \space 2x - 2 = -(x + 2)\)</div>
+                                                            <div>\(\LARGE |2x - 2| = |x + 2| \Rightarrow 2x - 2 = x + 2 \space ou \space 2x - 2 = -(x + 2)\)</div>
+                                                            <div>\(\LARGE |x|^2 - 5|x| + 4 = 0 \Rightarrow \textrm{só trocar o |x| por y e calcular, depois coloca no módulo de novo e aplica a propriedade do } A = \pm B\)</div>
+                                                            <div>\(\LARGE |x + 1| + |x| = 3 \Rightarrow \textrm{só montar todas as possibilidades dessa soma de módulos, primeiro positivo e segundo negativo...}\)</div>
+                                                        </div>
+                                                        <h3>2. Inequação</h3>
+                                                        <p class="texto">
+                                                            $$\LARGE |A| > B \Rightarrow \textrm{A > B ou A < -B}$$
+                                                            $$\LARGE |A| < B \Rightarrow \textrm{-B < A < B}$$
+                                                        </p>
+                                                        <div class="formulas">
+                                                            <div>\(\LARGE |2x + 1| < 3 \Rightarrow -3 < 2x + 1 < 3 \Rightarrow -2 < x < 1\)</div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
 
                                         </div>
                                     </div>
