--- a/index.html
+++ b/index.html
@@ -408,6 +408,55 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                                
+                                            <!-- Progressão Aritmética -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-algebra" href="#algebra-pa">Progressão Aritmética</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="algebra-pa" class="panel-collapse collapse">
+                                                    <div class="panel-body"> 
+                                                        <h3>1. Razão</h3>
+                                                        <p>\(\LARGE r = a_{n+1} - a_n\)</p>
+                                                        <h3>2. Termo geral de uma P.A.</h3>
+                                                        <p>\(\LARGE a_n = a_1 + (n - 1) \cdot r\)</p>
+                                                        <h3>3. Propriedade de 3 termos consecutivos de uma P.A.</h3>
+                                                        <p>\(\LARGE a_p = \frac{a_{p-1} + a_{p+1}}{2}\)</p>
+                                                        <h3>4. Propriedade de dois termos equidistantes dos extremos</h3>
+                                                        <p>\(\LARGE a_p + a_k = a_1 + a_n\)</p>
+                                                        <h3>5. Soma dos n primeiros termos</h3>
+                                                        <p>\(\LARGE S_n = \frac{(a_1 + a_n) \cdot n}{2}\)</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                                
+                                            <!-- Progressão Geométrica -->
+                                            <div class="panel panel-default">
+                                                <div class="panel-heading">
+                                                    <h4 class="panel-title">
+                                                        <a data-toggle="collapse" data-parent="#accordion-mat-algebra" href="#algebra-pg">Progressão Geométrica</a>
+                                                    </h4>
+                                                </div>
+                                                <div id="algebra-pg" class="panel-collapse collapse">
+                                                    <div class="panel-body"> 
+                                                        <h3>1. Razão</h3>
+                                                        <p>\(\LARGE q = \frac{a_{n+1}}{a_n}\)</p>
+                                                        <h3>2. Termo geral de uma P.G.</h3>
+                                                        <p>\(\LARGE a_n = a_1 \cdot q^{n - 1}\)</p>
+                                                        <h3>3. Propriedade de 3 termos consecutivos de uma P.G.</h3>
+                                                        <p>\(\LARGE a_p^2 = a_{p-1} \cdot a_{p + 1}\)</p>
+                                                        <h3>4. Propriedade de dois termos equidistantes dos extremos</h3>
+                                                        <p>\(\LARGE a_p \cdot a_k = a_1 \cdot a_n\)</p>
+                                                        <h3>5. Produto dos n primeiros termos</h3>
+                                                        <p>\(\LARGE |P_n| = \sqrt{(a_1 \cdot a_n)^n}\)</p>
+                                                        <h3>6. Soma dos infinitos termos de uma P.G.</h3>
+                                                        <p>\(\LARGE - 1 < q < 1\)</p>
+                                                        <p>\(\LARGE S = \frac{a_1}{1 - q}\)</p>
+                                                    </div>
+                                                </div>
+                                            </div>
 
                                         </div>
                                     </div>
